base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  namespace: default
spec:
  ports:
  - port: 8081
    targetPort: 8085
    protocol: TCP
    name: flask
