base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-display-console
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kustomize.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mywebapp
            port:
              number: 8081
